# deepgram-twilio-streaming-rust

./: Cargo.toml  Dockerfile  generate_self_signed_certs.sh
src/: audio.rs  main.rs  message.rs  state.rs  twilio_response.rs
src/handlers/: mod.rs  subscriber.rs  twilio.rs
